# etmod

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  build-etmod.sh  end_match_out.temp.txt  etmod-scons-build.sh  mkpak2.sh  mkpak3.sh  start-etmod-test  uncrustify.cfg  uncrustify.sh
cmake/: FindMysql.cmake  git_version.h.in
database/: dumpall  dumptable  mklist
database/etlegacy/: etlegacylist.txt  map_stats.sql  player_admin.sql  player_levels.sql  player_xp.sql  server_status.sql
docs/: coding-standards.txt  commit-rules.txt  license.txt
docs/from-id/: Readme.txt
docs/from-omnibot/: ReadMe_OmniBot_r2497.txt
extra/sql/: dbdump.sql
resource-config/: campaigncycle.cfg  default.cfg  mapvotecycle.cfg  objectivecycle.cfg  server.cfg  settings.cfg  shrubbot.cfg
resource-omnibot/et/nav/: .directory  1944_beach.gm  1944_beach_goals.gm  1944_huertgen.gm  1944_huertgen_final2.gm  1944_huertgen_final2_goals.gm  1944_huertgen_goals.gm  1944_nordwind2.gm  1944_nordwind2_goals.gm  2dom1.gm  2dom1_goals.gm  2hide.gm  2hide_cal_r1.gm  2hide_cal_r1_goals.gm  2hide_goals.gm  2tanks.gm  2tanks_goals.gm  [dark]-siege_beta.gm  [dark]-siege_beta.way  [dark]-siege_beta_goals.gm  __bridges__.gm  __bridges__.way  __bridges___goals.gm  aa-guns.gm  aa-guns.way  aa-guns_goals.gm  adlerhorst_te.gm  adlerhorst_te.way  adlerhorst_te_goals.gm  adlernest.gm  adlernest_2.gm  adlernest_2_goals.gm  adlernest_goals.gm  ae_sniper_night.gm  ae_sniper_night_goals.gm  ae_wizerness_final.gm  ae_wizerness_final_goals.gm  al_kad_b2.gm  al_kad_b2_goals.gm  al_kad_b3.gm  (+688 more)
resource-omnibot/et/scripts/: et_autoexec.gm  et_botnames.gm  et_botnames_ext.gm  et_commands.gm  et_regiontriggers.gm  et_utilities.gm  et_weapontables.gm.mine  et_weapontables.gm.r1966  et_weapontables.gm.r2181
resource-omnibot/et/scripts/goals/: goal_airstrike.gm  goal_askforammo.gm  goal_askforhealth.gm  goal_build.gm  goal_camp.gm  goal_checkdisguise.gm  goal_checkpoint.gm  goal_checkstuck.gm  goal_classmanager.gm  goal_combatmovement.gm  goal_covertops.gm  goal_defuse.gm  goal_deliversupplies.gm  goal_difficulty.gm  goal_dispenseammo.gm  goal_dispensehealth.gm  goal_escort.gm  goal_grenade.gm  goal_hunt.gm  goal_indisguise.gm  goal_mobilemg42.gm  goal_mount.gm  goal_mountmg42.gm  goal_paththrough_airstrike.gm  goal_pickupitems.gm  goal_plant.gm  goal_repairmg42.gm  goal_resetxp.gm  goal_revive.gm  goal_ride.gm  goal_ridetram.gm  goal_roaming.gm  goal_rolemanager.gm  goal_selectweapons.gm  goal_smokebomb.gm  goal_supplyself.gm  goal_testevents.gm  goal_tripmine.gm  goal_useswitch.gm  goal_voicechat.gm  (+2 more)
resource-omnibot/et/scripts/mapgoals/: mapgoal_revive.gm
resource-omnibot/et/scripts/weapons/: weapon_adrenaline.gm  weapon_akimbo_colt.gm  weapon_akimbo_luger.gm  weapon_akimbo_silenced_colt.gm  weapon_akimbo_silenced_luger.gm  weapon_ammopack.gm  weapon_binoculars.gm  weapon_carbine.gm  weapon_colt.gm  weapon_defaults.gm  weapon_dynamite.gm  weapon_etnam_akimbo_mac10.gm  weapon_etnam_gps.gm  weapon_etnam_ithaca.gm  weapon_etnam_law.gm  weapon_etnam_m3a1.gm  weapon_etnam_m79.gm  weapon_etnam_napalm_silent_ppsh.gm  weapon_etnam_revolver.gm  weapon_etnam_rpd.gm  weapon_etnam_s_ak47.gm  weapon_etnam_s_ak47_scoped.gm  weapon_fg42.gm  weapon_fg42_scoped.gm  weapon_flamethrower.gm  weapon_garand.gm  weapon_garand_scope.gm  weapon_gpg40.gm  weapon_grenade_allies.gm  weapon_grenade_axis.gm  weapon_jaymod_adrenalineshare.gm  weapon_jaymod_landmine_bbetty.gm  weapon_jaymod_landmine_poisongas.gm  weapon_jaymod_m97shotgun.gm  weapon_jaymod_poisongas.gm  weapon_jaymod_poisonsyringe.gm  weapon_k43.gm  weapon_k43_scoped.gm  weapon_kar98.gm  weapon_knife.gm  (+38 more)
resource-omnibot/et/user/: omni-bot.cfg  omni-bot.txt
resource-omnibot/global_scripts/: commands.gm  makegm.gm  server_manager.gm  utilities.gm
resource-omnibot/global_scripts/goals/: goal_meatshield.gm  goal_paththrough_mover.gm  goal_paththrough_navigation.gm  goal_paththrough_useswitch.gm  goal_switch.gm  goal_testbot.gm
resource-omnibot/global_scripts/weapons/: weapon_sample.gm
resource-pak2/ui/: credits_et260.menu  credits_etmod.menu  menus.txt  playonline.menu
resource-pak2/ui/assets/: logo_etmod.tga
src/: .gitignore  SConscript.cgame  SConscript.curl  SConscript.game  SConstruct  client_ver.py
src/cgame/: cg_consolecmds.c  cg_crash.c  cg_draw.c  cg_fireteamoverlay.c  cg_loadpanel.c  cg_local.h  cg_main.c  cg_osfile.c  cg_osfile.h  cg_players.c  cg_playerstate.c  cg_predict.c  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_uid.c  cg_weapons.c  etmodc.h  tr_types.h
src/curl-7.28.1/: Makefile
src/game/: ai_dmq3.h  ai_main.h  ai_team.h  ai_teamX.h  be_aas.h  be_ai_char.h  be_ai_chat.h  be_ai_gen.h  be_ai_goal.h  be_ai_move.h  be_ai_weap.h  be_ea.h  bg_animation.c  bg_animgroup.c  bg_campaign.c  bg_character.c  bg_classes.c  bg_local.h  bg_misc.c  bg_pmove.c  bg_public.h  bg_slidemove.c  bg_sscript.c  bg_stats.c  bg_tracemap.c  botai.h  botlib.h  chars.h  et-antiwarp.c  etmod.h  etmod.h.in  etpro_mdx.c  etpro_mdx.h  etpro_mdx_lut.h  g_active.c  g_alarm.c  g_antilag.c  g_bot.c  g_buddy_list.c  g_censor.c  (+68 more)
src/sha-1/: sha.c
src/ui/: ui_main.c  ui_shared.c
